--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,22 @@
 {
-    "name": "rock/core",
-    "description": "Rock Framework Core for php 5.1.6",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Andre Nils",
-            "email": "nilzao@gmail.com"
-        }
-    ],
-    "require": {
-        "php": ">=5.1.6"
-    },
-    "autoload": {
-        "psr-0": {
-            "": "src/"
-        }
-    }
+	"name": "rock/core",
+	"description": "Rock Framework Core for php 5.1.6",
+	"license": "MIT",
+	"authors": [
+		{
+			"name": "Andre Nils",
+			"email": "nilzao@gmail.com"
+		}
+	],
+	"autoload": {
+		"classmap": [
+			"tests/"
+		],
+		"psr-0": {
+			"": "src/"
+		}
+	},
+	"require-dev": {
+		"phpunit/phpunit": "9.5.28"
+	}
 }
